fix respect_tooltip_display option